// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`empty.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
+++
+++

=====================================output=====================================
+++
+++

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
+++
date =         2024-02-02T04:14:54-08:00
draft = false
title = 'Example'
weight = 10
[params]
author   =     'John Smith'
+++

=====================================output=====================================
+++
date = 2024-02-02T04:14:54-08:00
draft = false
title = 'Example'
weight = 10
[params]
author = 'John Smith'
+++

================================================================================
`;
